--- a/src/index.css
+++ b/src/index.css
@@ -455,4 +455,167 @@ ul button {
   outline: 0 !important;
 }
 
-/* toast styles */
+/* add-book styles */
+.books h1 {
+  margin-bottom: 15px;
+}
+
+.main-div-with-book-details {
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+  height: 77vh;
+  border-radius: 32px;
+  padding: 2vw;
+}
+
+.left {
+  /* border: 1px solid red; */
+  width: 100%;
+  height: 100%;
+  padding-right: 10px;
+}
+.left input,
+.left select {
+  margin-bottom: 25px;
+}
+
+.left input.form-control.required:visited {
+  border: 1px solid red;
+}
+.left p {
+  display: none;
+  margin: 5;
+  margin-top: -25px;
+  color: #dc3545;
+}
+.missing-field-warning {
+  color: #dc3545;
+  /* padding-top: 5px; */
+}
+.right {
+  border: 1px solid green;
+  width: 100%;
+  height: 100%;
+  padding-left: 10px;
+}
+.form-group select {
+  background-color: #eff1fd;
+  width: 100%;
+  border: none;
+}
+
+select.form-select.form-control {
+  color: grey;
+}
+
+.invisibleSpan {
+  visibility: hidden;
+}
+
+/* input.form-control:invalid { */
+/* border: 1px solid red; */
+/* } */
+
+/* .form-group input::after {
+  content: "*";
+  display: block;
+  color: #dc3545;
+} */
+
+/* works */
+/* input.form-control::after {
+  content: "*";
+  display: block;
+  color: #dc3545;
+} */
+
+/* input::-webkit-input-placeholder:after {
+  color: red;
+  content: " *";
+} */
+
+/*  */
+/* .asterisk:-moz-placeholder {
+  color: #f00;
+  opacity: 1;
+} */
+/* .asterisk::-moz-placeholder {
+  color: #f00;
+  opacity: 1;
+} */
+/* .asterisk:-ms-input-placeholder {
+  color: #f00;
+} */
+
+/* Red border only if the input is empty */
+/* input:placeholder-shown {
+  border: 1px solid red;
+} */
+
+/* input:placeholder-shown + span::after {
+  content: "*";
+  display: block;
+  color: #dc3545;
+  position: absolute;
+  top: -50px;
+  right: -100px;
+} */
+
+/* display: inline; */
+/* .temp1::after {
+  content: "*";
+  position: relative;
+  top: -50px;
+  right: 0;
+  left: 5vw;
+  color: #dc3545;
+} */
+/* padding: 0;
+  margin: 0; */
+
+/* .temp1 {
+  position: relative;
+}
+
+.temp1::after {
+  content: "*";
+  position: absolute;
+  right: 86%;
+  top: +3px;
+  color: red;
+  z-index: 5;
+} */
+
+/* input */
+
+/* input */
+
+/* input.form-control:focus + .selec::after {
+  content: "*";
+  display: block;
+  color: #dc3545;
+  position: absolute;
+} */
+/* height: 10px; */
+/* width: 10px; */
+/* background-color: blue; */
+
+/* p::after,
+input::after {
+  content: "My after element";
+  border: 2px solid red;
+  padding: 2px;
+  margin-left: 10px;
+} */
+
+/* select.form-control::after {
+  content: "*";
+  width: 10px;
+  height: 10px;
+  display: block;
+  color: #dc3545;
+  background-color: blue;
+} */
