--- a/src/index.css
+++ b/src/index.css
@@ -486,20 +486,27 @@ ul button {
   border: 1px solid red;
 }
 .left p {
-  display: none;
+  /* display: none; */
+  position: relative;
+  bottom: -5px;
+  left: 5px;
   margin: 5;
   margin-top: -25px;
   color: #dc3545;
 }
-.missing-field-warning {
+
+/* .missing-field-warning {
   color: #dc3545;
-  /* padding-top: 5px; */
-}
+} */
 .right {
   border: 1px solid green;
   width: 100%;
   height: 100%;
   padding-left: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: ce;
 }
 .form-group select {
   background-color: #eff1fd;
@@ -514,6 +521,13 @@ select.form-select.form-control {
 .invisibleSpan {
   visibility: hidden;
 }
+/* .upload-btn {
+  background: "none";
+  border: 2px solid #ad5eab;
+  border-radius: "12px";
+  font-size: "12px";
+  margin-bottom: 20px;
+} */
 
 /* input.form-control:invalid { */
 /* border: 1px solid red; */
