--- a/src/index.css
+++ b/src/index.css
@@ -499,7 +499,7 @@ ul button {
   color: #dc3545;
 } */
 .right {
-  border: 1px solid green;
+  /* border: 1px solid green; */
   width: 100%;
   height: 100%;
   padding-left: 10px;
@@ -521,115 +521,53 @@ select.form-select.form-control {
 .invisibleSpan {
   visibility: hidden;
 }
-/* .upload-btn {
-  background: "none";
-  border: 2px solid #ad5eab;
-  border-radius: "12px";
-  font-size: "12px";
-  margin-bottom: 20px;
-} */
 
-/* input.form-control:invalid { */
-/* border: 1px solid red; */
-/* } */
+input[type="file"] {
+  /* border: 1px solid red; */
+  width: 60%;
 
-/* .form-group input::after {
-  content: "*";
-  display: block;
-  color: #dc3545;
-} */
-
-/* works */
-/* input.form-control::after {
-  content: "*";
-  display: block;
-  color: #dc3545;
-} */
-
-/* input::-webkit-input-placeholder:after {
-  color: red;
-  content: " *";
-} */
-
-/*  */
-/* .asterisk:-moz-placeholder {
-  color: #f00;
-  opacity: 1;
-} */
-/* .asterisk::-moz-placeholder {
-  color: #f00;
-  opacity: 1;
-} */
-/* .asterisk:-ms-input-placeholder {
-  color: #f00;
-} */
-
-/* Red border only if the input is empty */
-/* input:placeholder-shown {
-  border: 1px solid red;
-} */
-
-/* input:placeholder-shown + span::after {
-  content: "*";
-  display: block;
-  color: #dc3545;
-  position: absolute;
-  top: -50px;
-  right: -100px;
-} */
-
-/* display: inline; */
-/* .temp1::after {
-  content: "*";
-  position: relative;
-  top: -50px;
-  right: 0;
-  left: 5vw;
-  color: #dc3545;
-} */
-/* padding: 0;
-  margin: 0; */
-
-/* .temp1 {
-  position: relative;
+  /* background: none;
+  border: 2px solid #e03fd8;
+  border-radius: 12px;
+  font-size: 12px;
+  margin-bottom: 10px;
+  color: #e03fd8;
+  border-radius: 5px;
+  font-weight: bold;
+  border-radius: 12px;
+  padding: 4px 20px; */
 }
-
-.temp1::after {
-  content: "*";
-  position: absolute;
-  right: 86%;
-  top: +3px;
-  color: red;
-  z-index: 5;
-} */
-
-/* input */
-
-/* input */
-
-/* input.form-control:focus + .selec::after {
-  content: "*";
-  display: block;
-  color: #dc3545;
-  position: absolute;
-} */
-/* height: 10px; */
-/* width: 10px; */
-/* background-color: blue; */
-
-/* p::after,
-input::after {
-  content: "My after element";
-  border: 2px solid red;
-  padding: 2px;
-  margin-left: 10px;
-} */
-
-/* select.form-control::after {
-  content: "*";
-  width: 10px;
-  height: 10px;
-  display: block;
-  color: #dc3545;
-  background-color: blue;
-} */
+.custom-file-input::-webkit-file-upload-button {
+  visibility: hidden;
+}
+.custom-file-input::before {
+  content: "Upload Book Cover";
+  display: inline-block;
+  /* background: linear-gradient(top, #f9f9f9, #e3e3e3); */
+  /* border: 1px solid #999; */
+  /* border-radius: 3px; */
+  /* padding: 5px 8px; */
+  /* outline: none; */
+  /* white-space: nowrap; */
+  /* -webkit-user-select: none; */
+  /* cursor: pointer; */
+  /* text-shadow: 1px 1px #fff; */
+  /* font-weight: 700; */
+  /* font-size: 10pt; */
+  background: none;
+  border: 2px solid #e03fd8;
+  border-radius: 12px;
+  font-size: 12px;
+  margin-bottom: 10px;
+  color: #e03fd8;
+  border-radius: 5px;
+  font-weight: bold;
+  border-radius: 12px;
+  padding: 10px 20px;
+}
+.custom-file-input:hover::before {
+  /* border-color: black; */
+}
+.custom-file-input:active::before {
+  background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
+}
