--- a/src/index.css
+++ b/src/index.css
@@ -108,21 +108,6 @@ button .submitButton {
 
 .img-container {
   width: 45%;
-  /* background-image: linear-gradient(
-    to right,
-    #a446c2,
-    #923fbe,
-    #7f38ba,
-    #6b32b5,
-    #542db1,
-    #4836b7,
-    #383fbc,
-    #2346c1,
-    #225bd0,
-    #276fde,
-    #3383eb,
-    #4497f6
-  ); */
   background-image: linear-gradient(
     90deg,
     rgba(221, 139, 239, 1) 5%,
@@ -235,15 +220,9 @@ nav h3 {
   color: #2596be;
 }
 .dropdown-menu {
-  /* z-index: 10; */
   display: inline-block;
-  /* margin-right: -200px; */
   margin-left: -55px;
   margin-top: 10px;
-  /* padding-right: -200px; */
-  /* position: relative;
-  right: 100px;
-  top: 1px; */
 }
 ul {
   padding-left: 10px;
@@ -263,11 +242,6 @@ ul button {
 .books {
   padding-left: 5vw;
   padding-right: 1vw;
-}
-/* .books h1 {
-  padding-left: 5vw;
-} */
-.books {
   transition: var(--transition);
   width: 90vw;
 }
@@ -280,9 +254,6 @@ ul button {
   display: flex;
 }
 
-/* .password-div input {
-  width: 100%;
-} */
 .search-div button {
   width: 0;
   margin: 0;
@@ -301,24 +272,12 @@ ul button {
   padding: 10px 0;
   justify-content: space-between;
   vertical-align: bottom;
-  /* align-items: center; */
 }
-
-/* .add-book-div button{
-  margin: 0;
-  margin-left: 50px;
-} */
-/* .add-book-div button {
-  margin-left: -55px;
-  margin-top: 10px;
-  align-items: center;
-} */
 
 .books-table {
   background-color: white;
   border-radius: 10px;
   margin-top: 20px;
-  /* padding: 10px; */
 }
 .books-table table th {
   padding: 10px 0;
@@ -336,13 +295,6 @@ ul button {
   width: 20%;
   height: 8vh;
   text-align: left;
-  /* vertical-align: middle; */
-  /* justify-content: flex-start; */
-  /* align-items: flex-start; */
-  /* height: 60px; */
-  /* align-items: center;
-  justify-content: center; */
-  /* vertical-align: text-top; */
 }
 .books-table tr:nth-child(6),
 .books-table th:nth-child(6),
@@ -352,29 +304,17 @@ ul button {
   padding-right: 20px;
 }
 .pagination-nav {
-  /* border: 1px solid red; */
   padding: 0;
   margin: 0;
   position: relative;
   float: right;
   width: auto;
-  /* right: 0; */
-  /* height: auto; */
-  /* padding-right: 1vw; */
-  /* padding-left: 5vw; */
-  /* left: 0; */
-  /* width: 100%; */
 }
 .pagination-nav nav {
-  /* align-items: end; */
-  /* justify-content: end; */
   padding: 0;
   margin: 0;
-  /* border: 1px solid green; */
   width: 100%;
   background: transparent;
-  /* height: 100%; */
-  /* height: auto; */
 }
 
 .lock-icon img {
@@ -570,4 +510,398 @@ input[type="file"] {
 }
 .custom-file-input:active::before {
   background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
+}
+
+/* @media screen and (min-width: 800px) {
+  .nav-center {
+    max-width: 1170px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+  }
+  .nav-header {
+    padding: 0;
+  }
+  .nav-toggle {
+    display: none;
+  }
+  .links-container {
+    height: auto !important;
+  }
+  .links {
+    display: flex;
+  }
+  .links a {
+    padding: 0;
+    margin: 0 0.5rem;
+  }
+  .links a:hover {
+    padding: 0;
+    background: transparent;
+  }
+  .social-icons {
+    display: flex;
+  }
+  .social-icons a {
+    margin: 0 0.5rem;
+    color: var(--clr-primary-5);
+    transition: var(--transition);
+  }
+  .social-icons a:hover {
+    color: var(--clr-primary-7);
+  }
+} */
+
+/* media queries */
+/* @media screen and (min-width: 800px) {
+  h1 {
+    font-size: 4rem;
+  }
+  h2 {
+    font-size: 2.5rem;
+  }
+  h3 {
+    font-size: 1.75rem;
+  }
+  h4 {
+    font-size: 1rem;
+  }
+  body {
+    font-size: 1rem;
+  }
+  h1,
+  h2,
+  h3,
+  h4 {
+    line-height: 1;
+  }
+
+  /* .content {
+    width: 100vw;
+    height: 100vh;
+  } */
+
+/* .content {
+    width: 100vw;
+    height: 100vh;
+    padding-left: 5vw;
+    border: 1px solid red;
+  } */
+
+/* .books {
+  padding-left: 5vw;
+  padding-right: 1vw;
+  transition: var(--transition);
+  width: 90vw;
+} */
+
+/* .books {
+    padding-left: 5vw;
+    padding-right: 7vw;
+    transition: var(--transition);
+    width: 90vw;
+  } */
+/* }  */
+
+@media screen and (max-width: 1024px) {
+  h1 {
+    font-size: 4rem;
+  }
+  h2 {
+    font-size: 2.5rem;
+  }
+  h3 {
+    font-size: 1.75rem;
+  }
+  h4 {
+    font-size: 1rem;
+  }
+  body {
+    font-size: 1rem;
+  }
+  h1,
+  h2,
+  h3,
+  h4 {
+    line-height: 1;
+  }
+  .content {
+    width: 100vw;
+    height: 100vh;
+  }
+  .content nav {
+    padding-left: 12vw;
+  }
+  .books {
+    padding-left: 12vw;
+    height: 80vh;
+    transition: var(--transition);
+  }
+  .books-table {
+    margin-top: 5px;
+  }
+  .pagination-nav {
+    margin-top: -5vh;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 3rem;
+  }
+  h2 {
+    font-size: 1.5rem;
+  }
+  h3 {
+    font-size: 1.65rem;
+  }
+  h4 {
+    font-size: 0.9rem;
+  }
+  body {
+    /* font-size: 0.85rem; */
+    font-size: 1rem;
+  }
+  h1,
+  h2,
+  h3,
+  h4 {
+    line-height: 0.85;
+  }
+  .content {
+    width: 100vw;
+    height: 100vh;
+    font-size: xx-small;
+  }
+  .content nav {
+    padding-left: 20vw;
+  }
+
+  aside {
+    width: 23%;
+  }
+  .logo {
+    height: 41px;
+  }
+
+  .add-book-div button {
+    font-size: x-small;
+  }
+
+  .search-div img {
+    height: 15px;
+  }
+
+  .search-input {
+    width: 20vw;
+    height: 5vh;
+  }
+
+  .books {
+    padding-left: 15vw;
+    height: 80vh;
+    transition: var(--transition);
+  }
+  .books-table {
+    margin-top: 5px;
+  }
+
+  .books-table tr,
+  .books-table th,
+  .books-table td {
+    width: 10%;
+    height: 4vh;
+    text-align: left;
+  }
+  .books-table tr:nth-child(6),
+  .books-table th:nth-child(6),
+  .books-table td:nth-child(6) {
+    width: 5%;
+    padding-right: 15px;
+  }
+
+  .lock-icon img {
+    width: 10px;
+  }
+
+  .lock-icon img {
+    margin: 0 0px;
+    margin-right: 0;
+    /* width: 20px; */
+  }
+
+  .pagination-nav {
+    margin-top: -5vh;
+  }
+}
+
+@media screen and (max-width: 481px) {
+  h1 {
+    font-size: 2rem;
+  }
+  h2 {
+    font-size: 1.5rem;
+  }
+  h3 {
+    font-size: 1.2rem;
+  }
+  h4 {
+    font-size: 0.9rem;
+  }
+  h5 {
+    font-size: smaller;
+  }
+  body {
+    /* font-size: 0.85rem; */
+    font-size: 1rem;
+  }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    line-height: 0.85;
+  }
+  .content {
+    width: 100vw;
+    height: 100vh;
+    font-size: smaller;
+  }
+  .content nav {
+    padding-left: 20vw;
+  }
+
+  aside {
+    width: 23%;
+    padding-top: 20px;
+  }
+  .logo {
+    height: 21px;
+  }
+  #root > main > div > aside > div.sidebar-Header > button {
+    width: 25px;
+    padding-right: 0px;
+    padding-left: 6px;
+    margin-left: 45px;
+  }
+  .dropdown .btn {
+    font-size: smaller;
+  }
+
+  .dropdown-menu {
+    /* width: 5vw; */
+    width: 12px;
+    /* min-height: 15px; */
+    min-width: 120px;
+    margin-right: 15px;
+    padding-right: 15px;
+    /* background-color: #dc3545; */
+    /* position: relative; */
+    /* right: 150px; */
+  }
+  /* .dropdown-menu > ul { */
+  /* padding-bottom: 0;s */
+  /* width: 5vw; */
+  /* width: 12px; */
+  /* margin-right: 150px; */
+  /* background-color: #dc3545; */
+  /* } */
+  .dropdown-menu > ul > li {
+    width: 12px;
+    /* font-size: smaller; */
+    font-size: 9px;
+    padding-top: 5px;
+  }
+  /* #root > main > div > div > nav > div.dropdown > div {
+    padding-right: 100px;
+    margin-right: 100px;
+    font-size: smaller;
+  } */
+
+  /* div.dropdown-menu {
+    font-size: smaller;
+  } */
+  /* .dropdown-menu {
+    display: inline-block;
+    margin-left: -55px;
+    margin-top: 10px;
+    font-size: smaller;
+  } */
+
+  .add-book-div button {
+    font-size: smaller;
+  }
+
+  .search-div img {
+    height: 10px;
+    padding-right: 0;
+    padding-left: 15px;
+    margin-bottom: 5px;
+  }
+
+  .search-input {
+    width: 25vw;
+    height: 4vh;
+    font-size: smaller;
+  }
+
+  .books {
+    padding-left: 15vw;
+    height: 10vh;
+    transition: var(--transition);
+  }
+  .books-table {
+    margin-top: 5px;
+  }
+
+  /* .books-table tr,
+  .books-table th,
+  .books-table td {
+    width: 5%;
+    height: 2vh;
+    text-align: left;
+  }
+  .books-table tr:nth-child(6),
+  .books-table th:nth-child(6),
+  .books-table td:nth-child(6) {
+    width: 5%;
+    padding-right: 5px;
+  } */
+  /* works */
+
+  .table > thead > tr > th,
+  .table > thead > tr > td {
+    font-size: smaller;
+    padding-left: 5px;
+  }
+  .table > tbody > tr > td {
+    font-size: smaller;
+    padding-left: 5px;
+  }
+
+  .tab {
+    height: 50px;
+    padding-left: 10px;
+    /* margin-top: 25px; */
+  }
+  .tab img {
+    height: 10px;
+  }
+  /* works */
+
+  .lock-icon img {
+    width: 10px;
+  }
+
+  .lock-icon img {
+    margin: 0 0px;
+    margin-right: 0;
+    /* width: 20px; */
+  }
+
+  .pagination-nav {
+    margin-top: -6vh;
+  }
 }
